force-app/main/default/objects/ADS__c/ADS__c.object-meta.xml
<CustomObject>
    <label>AMT</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMT</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>