force-app/main/default/objects/ADS__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact: Phone</label>
    <type>Phone</type>
</CustomField>