force-app/main/default/objects/ADS__c/fields/Employee_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Employee_Contractor__c</fullName>
    <label>Employee/Contractor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>