force-app/main/default/objects/ADS__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Employee ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>