force-app/main/default/objects/ADS__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>