force-app/main/default/objects/ADS__c/fields/MSid__c.field-meta.xml
<CustomField>
    <fullName>MSid__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>MSid</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>