force-app/main/default/objects/ADS__c/fields/organizationalPerson_co__c.field-meta.xml
<CustomField>
    <fullName>organizationalPerson_co__c</fullName>
    <label>organizationalPerson.co</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ARE</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>BRA</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CHL</fullName>
            </value>
            <value>
                <fullName>CHN</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>CRI</fullName>
            </value>
            <value>
                <fullName>GBR</fullName>
            </value>
            <value>
                <fullName>HKG</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>IRL</fullName>
            </value>
            <value>
                <fullName>MEX</fullName>
            </value>
            <value>
                <fullName>PHL</fullName>
            </value>
            <value>
                <fullName>PRT</fullName>
            </value>
            <value>
                <fullName>SGP</fullName>
            </value>
            <value>
                <fullName>URK</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>