force-app/main/default/objects/ADS__c/fields/organizationalPerson_l__c.field-meta.xml
<CustomField>
    <fullName>organizationalPerson_l__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>organizationalPerson.l</label>
    <length>100</length>
    <type>Text</type>
</CustomField>