force-app/main/default/objects/ADS__c/fields/uht_SECURE_uht_InternalSegment__c.field-meta.xml
<CustomField>
    <fullName>uht_SECURE_uht_InternalSegment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>uht-SECURE.uht-InternalSegment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>