force-app/main/default/objects/ADS__c/fields/uht_SECURE_uht_MarketGroup__c.field-meta.xml
<CustomField>
    <fullName>uht_SECURE_uht_MarketGroup__c</fullName>
    <label>uht-SECURE.uht-MarketGroup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Optum</fullName>
            </value>
            <value>
                <fullName>UnitedHealthcare</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Optum Technology</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>